# SCDS

./: README  SCDSLicense.txt
MeshTools/: CMakeLists.txt  NormalGrabber.cxx  XYZgrabber.cxx  argio.hh  itkImageToVTKImageFilter.h  vol2surf.cxx  vol2surfMain.cxx  vtkSetup.cmake
MeshTools/.svn/: entries
MeshTools/.svn/text-base/: MeshMath.cxx.svn-base  NormalGrabber.cxx.svn-base  XYZgrabber.cxx.svn-base  itkImageToVTKImageFilter.txx.svn-base  vol2surf.h.svn-base  vol2surfGUI.fl.svn-base
Utilities/PostprocessingTPS/: CMakeLists.txt  KWMeshVisuAttributeIO.cxx  KWMeshVisuAttributeIO.h  PostProcessingCommandLine.cxx  PostprocessingTPS.xml  main.cxx  pwd  vtkFSIO.h  vtkFSSurfaceReader.cxx  vtkFSSurfaceReader.h  vtkFSSurfaceScalarReader.cxx  vtkFSSurfaceScalarReader.h  vtkFreeSurferWin32Header.h
data/: readme.txt
shapeWorks/code/: CMakeLists.txt
shapeWorks/code/ITKParticleSystem/: CMakeLists.txt  Procrustes3D.h  itkMaximumEntropyCorrespondenceSampler.h  itkMaximumEntropyCorrespondenceSampler.txx  itkMaximumEntropySurfaceSampler.h  itkMaximumEntropySurfaceSampler.txx  itkParticleAttribute.h  itkParticleContainer.h  itkParticleContainerArrayAttribute.h  itkParticleCurvatureEntropyGradientFunction.h  itkParticleCurvatureEntropyGradientFunction.txx  itkParticleDomain.h  itkParticleDomain.txx  itkParticleDualVectorFunction.h  itkParticleEnsembleEntropyFunction.h  itkParticleEnsembleEntropyFunction.txx  itkParticleEnsembleMeanFunction.h  itkParticleEnsembleMeanFunction.txx  itkParticleEntropyGradientFunction.h  itkParticleEntropyGradientFunction.txx  itkParticleEvents.h  itkParticleFunctionBasedShapeSpaceData.h  itkParticleGaussianModeWriter.h  itkParticleGaussianModeWriter.txx  itkParticleGeneralEntropyGradientFunction.h  itkParticleGeneralEntropyGradientFunction.txx  itkParticleGradientDescentPositionOptimizer.h  itkParticleGradientDescentPositionOptimizer.txx  itkParticleImageDomain.h  itkParticleImageDomainWithCurvature.h  itkParticleImageDomainWithGradients.h  itkParticleImageDomainWithHessians.h  itkParticleImplicitSurfaceDomain.h  itkParticleImplicitSurfaceDomain.txx  itkParticleMeanCurvatureAttribute.h  itkParticleMeanCurvatureAttribute.txx  itkParticleNeighborhood.h  itkParticleOmegaGradientFunction.h  itkParticleOmegaGradientFunction.txx  itkParticlePointIndexPair.h  (+25 more)
shapeWorks/code/ShapeWorksGroom/: CMakeLists.txt  ShapeWorksGroom.cxx  align_principal.h  align_principal.txx  antialias.h  antialias.txx  auto_crop.h  auto_crop.txx  auto_pad.h  auto_pad.txx  batchtool.h  batchtool.txx  blur.h  blur.txx  bounding_box.h  bounding_box.txx  center.h  center.txx  extract_centers.h  extract_centers.txx  fastmarching.h  fastmarching.txx  group.h  group.txx  hole_fill.h  hole_fill.txx  isolate.h  isolate.txx  measure_length.h  measure_length.txx  pca.h  pca.txx  relabel.h  relabel.txx  scale_principal.h  scale_principal.txx  simple_morphometrics.txx  split_segmentations.h  split_segmentations.txx  surface_point.h  (+5 more)
shapeWorks/code/ShapeWorksRun/: ShapeWorksRun.cxx  ShapeWorksRunApp.h  ShapeWorksRunApp.txx
shapeWorks/code/ShapeWorksShop/: CMakeLists.txt  CorrespondenceGUI.fl  ShapeWorksShop.cxx  ShapeWorksShopApp.cxx  ShapeWorksShopApp.h
shapeWorks/code/ShapeWorksView/: AnalyzeCorrespondenceGUI.fl  CMakeLists.txt  ShapeWorksView.cxx  ShapeWorksViewApp.cxx  ShapeWorksViewApp.h
shapeWorks/code/Utilities/: CS6350.h  colorScheme.h  filenameFactory.cxx  filenameFactory.h  glyph_pipeline.cxx  glyph_pipeline.h  isosurface_pipeline.cxx  isosurface_pipeline.h  itkMeshTovtkPolyData.cxx  itkMeshTovtkPolyData.h  itkParticleShapeStatistics.h  itkParticleShapeStatistics.txx  plane_widget_pipeline.cxx  plane_widget_pipeline.h  shape_statistics.cxx  shape_statistics.h  sphere_widget_pipeline.cxx  sphere_widget_pipeline.h  string_io.cxx  string_io.h  vtkITKUtility.h
shapeWorks/code/VtkFltk/: fltkVTKImageViewerBase.cxx  fltkVTKImageViewerBase.h  fltkVTKImageViewerGUI.fl  vtkFlRenderWindowInteractor.cxx  vtkFlRenderWindowInteractor.h
shapeWorks/code/params/: lex.yy.64.cxx  param.cxx  param.h  y.tab.64.cxx
src/: CMakeLists.txt
src/.svn/: entries
src/.svn/text-base/: CMakeCache.txt.svn-base  CMakeLists.txt.svn-base  Makefile.svn-base  MySetup_linux.cmake.svn-base  MySetup_win32.cmake.svn-base  cmake_install.cmake.svn-base  win32-readme.txt.svn-base
src/Applications/: CMakeLists.txt  Makefile
src/Applications/.svn/: entries
src/Applications/AtlasWerks/: main.cxx
src/Applications/cfWarp/: .main.cxx.swp  CMakeLists.txt  main.cxx
src/Applications/fWarp/: CMakeLists.txt
src/Applications/pDeform/: CMakeLists.txt  main.cxx
src/Applications/scdsWarp/: CMakeLists.txt  MakeVectorImage.cxx  cmake_install.cmake  main.cxx
src/Applications/txApply/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile
src/CMake/: SCDSMacros.cmake  fftw3Setup.cmake  itkSetup.cmake  lapackSetup.cmake
src/CMake/.svn/: entries
src/Libraries/.svn/: dir-prop-base  entries
src/Libraries/Algorithms/: AtlasBuilder.cxx  AtlasBuilder.h  CMakeLists.txt  ConstrainedFluidWarp.cxx  ConstrainedFluidWarp.h  EstimateAffine.cxx  EstimateAffine.h  FluidWarp.cxx  FluidWarp.h  FluidWarpParameters.cxx  SCDSAtlasBuilder.cxx  STAPLE.h  VectorAtlasBuilder.cxx  cmake_install.cmake  vectorDownsample.cxx  vectorDownsample.h
src/Libraries/Base/: ApplicationUtils.txx  CMakeLists.txt  Makefile  argio.h  cmake_install.cmake
src/Libraries/ContourTiler/: CMakeLists.txt  Makefile  README  addrand.cxx  addrand_extern.h  adj.cxx  cmake_install.cmake  cocirc_extern.h  cross.h  cti_cap.h  cti_globals.cxx  cti_globals.h  cti_tri.h  cti_vedge.h  ctiler.cxx  ctiler.h  cvt_phase.cxx  cvt_phase_extern.h  del.cxx  elim_coli.cxx  elim_coli_extern.h  extractslab.cxx  insertpt_extern.h  massage.cxx  mer.cxx  mer_extern.h  old_ctiler.cxx  slabtocaptile_extern.h  solidtet.cxx  vor.cxx  vor_extern.h
src/Libraries/DataTypes/: AffineTransform3D.txx  Anastruct.cxx  Array2D.h  CMakeLists.txt  Color.h  Contour.cxx  Contour.h  Image.txx  Line3D.h  Makefile  Matrix3D.txx  PCAStats.cxx  PCAStats.h  Vector2D.h  Vector2D.txx  Vector3D.txx  cmake_install.cmake
(+482 files in other folders)
