## fWarp
MARK_AS_ADVANCED(SCDS_COMPILE_APP_FWARP)
OPTION(SCDS_COMPILE_APP_FWARP "Compile fWarp" ON)
IF(SCDS_COMPILE_APP_FWARP)
  SUBDIRS(fWarp)
ENDIF(SCDS_COMPILE_APP_FWARP)

## scdsWarp
MARK_AS_ADVANCED(SCDS_COMPILE_APP_SCDSWARP)
OPTION(SCDS_COMPILE_APP_SCDSWARP "Compile scdsWarp" ON)
IF(SCDS_COMPILE_APP_SCDSWARP)
  SUBDIRS(scdsWarp)
ENDIF(SCDS_COMPILE_APP_SCDSWARP)

MARK_AS_ADVANCED(SCDS_COMPILE_APP_pDeform)
OPTION(SCDS_COMPILE_APP_pDeform "Compile pDeform" ON)
IF(SCDS_COMPILE_APP_pDeform)
  SUBDIRS(pDeform)
ENDIF(SCDS_COMPILE_APP_pDeform)

MARK_AS_ADVANCED(SCDS_COMPILE_APP_txApply)
OPTION(SCDS_COMPILE_APP_txApply "CompiletxApply" ON)
IF(SCDS_COMPILE_APP_txApply)
  SUBDIRS(txApply)
ENDIF(SCDS_COMPILE_APP_txApply)



MARK_AS_ADVANCED(SCDS_COMPILE_APP_AtlasWerks)
OPTION(SCDS_COMPILE_APP_AtlasWerks "CompileAtlasWerks" ON)
IF(SCDS_COMPILE_APP_AtlasWerks)
  SUBDIRS(AtlasWerks)
ENDIF(SCDS_COMPILE_APP_AtlasWerks)
